# zhilicon-benchmarks

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  perf-model-tests.yml
benchmarks/: CMakeLists.txt
benchmarks/kernels/: CMakeLists.txt
benchmarks/kernels/conv/: conv2d_naive.hpp  im2col.hpp
benchmarks/kernels/dsp/: fft_radix2.hpp  fir.hpp  iir.hpp  window.hpp
benchmarks/kernels/linalg/: matmul.hpp  qr_householder.hpp  transpose.hpp
benchmarks/kernels/quant/: dequant_mm.hpp  int8_mm.hpp  quantize.hpp
benchmarks/kernels/reduce/: argmax.hpp  parallel_sum.hpp  variance.hpp
benchmarks/kernels/tests/: aligned_test.cpp  argmax_test.cpp  bit_test.cpp  conv2d_test.cpp  dequant_mm_test.cpp  fft_test.cpp  fir_test.cpp  half_test.cpp  iir_test.cpp  im2col_test.cpp  int8_mm_test.cpp  matmul_test.cpp  parallel_sum_test.cpp  pseudorandom_test.cpp  qr_test.cpp  quantize_test.cpp  test_framework.hpp  transpose_test.cpp  variance_test.cpp  window_test.cpp
benchmarks/kernels/util/: aligned.hpp  bit.hpp  half.hpp  pseudorandom.hpp
chip_ops/: __init__.py  __main__.py  ate_program.py  cli.py  coverage_rollup.py  git_tools.py  lifecycle.py  mailbox.py  manifest.py  ppa_database.py  tape_out.py  workload_runner.py
ci/tests/: test_yaml_validity.py
ci/workflows/: baseline-update.yml  perf-models-test.yml  regression.yml  release.yml
docs/: COMPARISON_NOTES.md  METHODOLOGY.md  REPRODUCIBILITY.md
perf_models/: __init__.py  __main__.py  base.py  chips.py  cli.py  kernels.py  power.py  thermal.py  workloads.py
tests/: test_base.py  test_chips.py  test_cli.py  test_kernels.py  test_power.py  test_thermal.py  test_workloads.py
tests/chip_ops/: conftest.py  test_ate_program.py  test_cli.py  test_coverage_rollup.py  test_git_tools.py  test_lifecycle.py  test_mailbox.py  test_manifest.py  test_ppa_database.py  test_tape_out.py  test_workload_runner.py
